force-app/main/default/objects/TTR_Request_Form__c/fields/Product_Requested_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested_Notes__c</fullName>
    <description>Sell In/New Product Discussion Points</description>
    <inlineHelpText>Please enter any sell in or new product discussion points.</inlineHelpText>
    <label>Sell In/New Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>