force-app/main/default/objects/TTR_Request_Form__c/fields/Purpose_Built_Footwear__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Built_Footwear__c</fullName>
    <description>This field is used to identify if the store has participated in Purpose Built Footwear (job function) training.</description>
    <inlineHelpText>Please choose yes if the store has had training on Purpose Built Footwear (job function) training.</inlineHelpText>
    <label>Purpose Built Footwear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>