force-app/main/default/objects/TTR_Request_Form__c/fields/Send_Competitive_Info_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Competitive_Info_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to trigger an email regarding TTR Competitive Information entered in the TTR report</description>
    <inlineHelpText>This field is used to trigger an email regarding TTR Competitive Information entered in the TTR report</inlineHelpText>
    <label>Send Competitive Info Email</label>
    <type>Checkbox</type>
</CustomField>