force-app/main/default/objects/TTR_Request_Form__c/fields/Softlines_Manager__c.field-meta.xml
<CustomField>
    <fullName>Softlines_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operations/Training/Social Media manager</description>
    <inlineHelpText>Please enter the Operations/Training/Social Media Manager related to the Store.</inlineHelpText>
    <label>Operations Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TTR Request Form (Account Training Manager)</relationshipLabel>
    <relationshipName>TTR_Request_Form</relationshipName>
    <type>Lookup</type>
</CustomField>