force-app/main/default/objects/TTR_Request_Form__c/fields/Store_Department_Manager_or_Lead__c.field-meta.xml
<CustomField>
    <fullName>Store_Department_Manager_or_Lead__c</fullName>
    <description>This field is for Store Department Manager or Lead Name.</description>
    <inlineHelpText>Please enter the Store Department Manager or Lead Name.</inlineHelpText>
    <label>*Delete*Store Department Manager or Lead</label>
    <type>TextArea</type>
</CustomField>