force-app/main/default/objects/TTR_Request_Form__c/fields/Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the contact manager.</description>
    <inlineHelpText>Please enter the Store manager in this field.</inlineHelpText>
    <label>Store Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TTR Request Form (Contact Info)</relationshipLabel>
    <relationshipName>TTR_Request_Form2</relationshipName>
    <type>Lookup</type>
</CustomField>