force-app/main/default/objects/TTR_Request_Form__c/fields/Technology_Innovations__c.field-meta.xml
<CustomField>
    <fullName>Technology_Innovations__c</fullName>
    <description>This field is used to identify if the store has participated in Technology &amp; Innovations training.</description>
    <inlineHelpText>Please choose yes if the store has had training on Technology &amp; Innovations (Scentban, Exoflex, Cushin, etc).</inlineHelpText>
    <label>Technology &amp; Innovations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>