force-app/main/default/objects/TTR_Request_Form__c/fields/Time_Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Hours__c</fullName>
    <label>Time Spent (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>