force-app/main/default/objects/TTR_Request_Form__c/fields/Training_tools_reviewed_and_presented__c.field-meta.xml
<CustomField>
    <fullName>Training_tools_reviewed_and_presented__c</fullName>
    <description>This field is used to identify if the Training tools have been reviewed and presented.</description>
    <inlineHelpText>Please pick yes if the stores Training tools have been reviewed and presented.</inlineHelpText>
    <label>Training tools reviewed and presented</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>