force-app/main/default/objects/TTR_Request_Form__c/fields/TTR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TTR_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the name of the TTR Rep who visited the Store.</description>
    <inlineHelpText>Please enter the name of the TTR Rep who visited the Store.</inlineHelpText>
    <label>TTR Contact Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TTR_Request_Form1</relationshipName>
    <type>Lookup</type>
</CustomField>