force-app/main/default/objects/TTR_Request_Form__c/fields/TTR_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>TTR_Last_Visit__c</fullName>
    <description>This is the Date and Time of the last TTR Visit.</description>
    <inlineHelpText>Please enter the Date and Time of the last TTR Visit.</inlineHelpText>
    <label>TTR Last Visit</label>
    <type>DateTime</type>
</CustomField>