force-app/main/default/objects/TTR_Request_Form__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>Date which the actual visit of call with customer occurred.</description>
    <inlineHelpText>Date which the actual visit of call with customer occurred.</inlineHelpText>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>