force-app/main/default/objects/TTR_Request_Form__c/fields/Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason__c</fullName>
    <inlineHelpText>Select the primary reason(s) for the visit.</inlineHelpText>
    <label>Visit Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAM Face to Face</fullName>
            </value>
            <value>
                <fullName>CAM Outbound Call</fullName>
            </value>
            <value>
                <fullName>Clean Care Conditioning Event</fullName>
            </value>
            <value>
                <fullName>Ladies Night Event</fullName>
            </value>
            <value>
                <fullName>Merchandising/POP Install</fullName>
            </value>
            <value>
                <fullName>Product Reset</fullName>
            </value>
            <value>
                <fullName>Product University </fullName>
                <label>Product University/Training Clinic</label>
            </value>
            <value>
                <fullName>Safety Night Event</fullName>
            </value>
            <value>
                <fullName>Sales Blitz Event</fullName>
            </value>
            <value>
                <fullName>TTR Store Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>In-store selling</fullName>
                <isActive>false</isActive>
                <label>In-store selling</label>
            </value>
            <value>
                <fullName>Inventory Analysis </fullName>
                <isActive>false</isActive>
                <label>Inventory Analysis </label>
            </value>
            <value>
                <fullName>Marketing Material Distribution </fullName>
                <isActive>false</isActive>
                <label>Marketing Material Distribution </label>
            </value>
            <value>
                <fullName>Store Event</fullName>
                <isActive>false</isActive>
                <label>Store Event</label>
            </value>
            <value>
                <fullName>TTR Outbound Call</fullName>
                <isActive>false</isActive>
                <label>TTR Outbound Call</label>
            </value>
            <value>
                <fullName>Training Clinic</fullName>
                <isActive>false</isActive>
                <label>Training Clinic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>