force-app/main/default/objects/TTR_Request_Form__c/fields/Work_Product__c.field-meta.xml
<CustomField>
    <fullName>Work_Product__c</fullName>
    <description>These are the Work boot products.</description>
    <inlineHelpText>Please enter the Work boot product in this field.</inlineHelpText>
    <label>*Delete* Work Product</label>
    <type>TextArea</type>
</CustomField>