force-app/main/default/objects/TTR_Request_Form__c/fields/Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Work_Requested__c</fullName>
    <description>This field is used to capture the work product information.</description>
    <inlineHelpText>Please enter the work product informaiton in this field.</inlineHelpText>
    <label>*Delete* Work Requested</label>
    <type>TextArea</type>
</CustomField>