force-app/main/default/objects/TTR_Request_Form__c/fields/Work_Safety_Product_Specification__c.field-meta.xml
<CustomField>
    <fullName>Work_Safety_Product_Specification__c</fullName>
    <description>This field is used to identify if the store has participated in Work &amp; Safety Product Specifications.</description>
    <inlineHelpText>Please choose yes if the store has had training on Work/Safety Product Specification (ASTM, I/75 C/75, CSA, EH, ST, PR).</inlineHelpText>
    <label>Work &amp; Safety Product Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>