force-app/main/default/objects/TTR_Request_Form__c/fields/X3_5_Training_completed__c.field-meta.xml
<CustomField>
    <fullName>X3_5_Training_completed__c</fullName>
    <description>This field is used to identify if the store has participated in the3.5 day Training</description>
    <inlineHelpText>Please choose Yes if the store has had the 3.5 day Training (actively using website).</inlineHelpText>
    <label>3.5 Training completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>