force-app/main/default/objects/TTR_Request_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Form__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Form__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>