force-app/main/default/objects/TTR_Request_Form__c/listViews/John_Reimann_s_Accounts.listView-meta.xml
<ListView>
    <fullName>John_Reimann_s_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Immediate_Issues_Opportunities__c</columns>
    <columns>TTR_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAM__c</field>
        <operation>contains</operation>
        <value>John Reimann</value>
    </filters>
    <label>John Reimann&apos;s Accounts</label>
    <sharedTo>
        <group>CAM_TTR</group>
    </sharedTo>
</ListView>