force-app/main/default/objects/TTR_Request_Form__c/listViews/Mike_Pintz_Accounts.listView-meta.xml
<ListView>
    <fullName>Mike_Pintz_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Number__c</columns>
    <columns>Immediate_Issues_Opportunities__c</columns>
    <columns>TTR_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAM__c</field>
        <operation>equals</operation>
        <value>Mike Pintz</value>
    </filters>
    <label>Mike Pintz Accounts</label>
    <sharedTo>
        <group>CAM_TTR</group>
    </sharedTo>
</ListView>