force-app/main/default/objects/TTR_Request_Form__c/listViews/William_s_TTR_Forms.listView-meta.xml
<ListView>
    <fullName>William_s_TTR_Forms</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>CAM__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Immediate_Issues_Opportunities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>wgrot</value>
    </filters>
    <label>William&apos;s TTR Forms</label>
    <sharedTo>
        <group>CAM_TTR</group>
    </sharedTo>
</ListView>